main flow completed

--- a/app/src/main/res/layout/activity_increase_credit.xml
+++ b/app/src/main/res/layout/activity_increase_credit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color06">
@@ -19,7 +20,7 @@
             android:layout_height="0dp"
             android:background="@color/color06"
             android:orientation="horizontal"
-            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -30,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:onClick="OnBack"
                 android:text="@string/credit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="4"
@@ -46,6 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:gravity="right"
+                android:onClick="OnBack"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="4"
                 app:layout_constraintLeft_toRightOf="@id/tv_title"
@@ -71,7 +74,7 @@
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.18" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -96,7 +99,7 @@
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.25" />
+            app:layout_constraintGuide_percent="0.28" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -112,7 +115,7 @@
             app:layout_constraintWidth_percent="0.6">
 
             <TextView
-                android:id="@+id/tv_calculated"
+
                 style="@style/text_green"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -122,7 +125,7 @@
                 android:text="@string/money" />
 
             <TextView
-                android:id="@+id/tv_travel_cache"
+                android:id="@+id/tv_calculated"
                 style="@style/text_green"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -182,11 +185,10 @@
         android:background="@drawable/back_fifteen_radius_blue"
         android:drawableStart="@drawable/ic_credit_card_white_24dp"
         android:layoutDirection="rtl"
-        android:onClick="OnSupportClicked"
         android:text="@string/online_payment"
         android:translationY="-20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineMid"
@@ -201,7 +203,6 @@
         android:background="@drawable/back_fifteen_radius_green"
         android:drawableStart="@drawable/ic_credit_card_white_24dp"
         android:layoutDirection="rtl"
-        android:onClick="OnGiftCodeButtonClicked"
         android:text="@string/cache_payment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.08"
@@ -216,5 +217,7 @@
         android:layout_height="0dp"
         android:background="@drawable/bg_cut"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline" />
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
