--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -151,7 +151,7 @@
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.92" />
 
     <LinearLayout
         android:id="@+id/design_bottom_sheet"
@@ -168,7 +168,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:onClick="CallSupportClicked"
             android:rotation="250"
             android:src="@drawable/ic_phone_in_talk_white_24dp" />
 
@@ -177,6 +178,7 @@
             style="@style/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="CallSupportClicked"
             android:text="@string/call_suppprt" />
 
 
